--- a/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-default/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-default/pom.xml
@@ -24,20 +24,25 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-less-css</artifactId>
+    <artifactId>xwiki-platform-lesscss</artifactId>
     <version>6.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-less-css-default</artifactId>
+  <artifactId>xwiki-platform-lesscss-default</artifactId>
   <name>XWiki Platform - LESS CSS - Default</name>
   <packaging>jar</packaging>
   <description>Default implementation for XWiki Platform - LESS CSS - API</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.89</xwiki.jacoco.instructionRatio>
+     <!-- Old names of this module used for retro compatibility when resolving dependencies of old extensions -->
+     <xwiki.extension.features>
+     <!-- only used in 6.2M1 -->
+     org.xwiki.platform:xwiki-platform-less-css-default
+     </xwiki.extension.features>
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-less-css-api</artifactId>
+      <artifactId>xwiki-platform-lesscss-api</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
