--- a/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-script/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-script/pom.xml
@@ -24,17 +24,24 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-less-css</artifactId>
+    <artifactId>xwiki-platform-lesscss</artifactId>
     <version>6.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-less-css-script</artifactId>
+  <artifactId>xwiki-platform-lesscss-script</artifactId>
   <name>XWiki Platform - LESS CSS - Script</name>
   <packaging>jar</packaging>
   <description>Script Services for using LESS CSS preprocessor in XWiki</description>
+  <properties>
+     <!-- Old names of this module used for retro compatibility when resolving dependencies of old extensions -->
+     <xwiki.extension.features>
+     <!-- only used in 6.2M1 -->
+     org.xwiki.platform:xwiki-platform-less-css-script
+     </xwiki.extension.features>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-less-css-api</artifactId>
+      <artifactId>xwiki-platform-lesscss-api</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
