--- a/xwiki-platform-tools/pom.xml
+++ b/xwiki-platform-tools/pom.xml
@@ -23,49 +23,110 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform</artifactId>
+    <groupId>org.xwiki.commons</groupId>
+    <artifactId>xwiki-commons-pom</artifactId>
     <version>6.2-SNAPSHOT</version>
+    <relativePath>../xwiki-commons/xwiki-commons-pom/</relativePath>
   </parent>
-  <artifactId>xwiki-platform-tools</artifactId>
-  <name>XWiki Platform - Tools - Parent POM</name>
+  <groupId>org.xwiki.platform</groupId>
+  <artifactId>xwiki-platform</artifactId>
+  <name>XWiki Platform - Parent POM</name>
   <packaging>pom</packaging>
-  <description>XWiki Platform - Tools - Parent POM</description>
-  <modules>
-    <!-- Sorted Alphabetically -->
-    <module>xwiki-platform-tool-configuration-resources</module>
-    <module>xwiki-platform-tool-jetty</module>
-    <module>xwiki-platform-tool-packager-plugin</module>
-    <module>xwiki-platform-tool-rootwebapp</module>
-    <module>xwiki-platform-tool-standards-validator</module>
-    <module>xwiki-platform-tool-xmldoc-update-plugin</module>
-  </modules>
+  <version>6.2-SNAPSHOT</version>
+  <description>XWiki Platform - Parent POM</description>
   <properties>
-    <!-- Don't run CLIRR on tools since we currently consider them internal tools -->
-    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Useful for external Maven projects that extend the Platform POM. Must not be used by Platform project! -->
+    <platform.version>${commons.version}</platform.version>
+    <!-- Versions of XWiki dependencies used in Platform modules -->
+    <rendering.version>${platform.version}</rendering.version>
+    <!-- Version of HSQLDB that we use in Platform when import XARs for creating functional test environments -->
+    <hsqldb.version>2.3.1</hsqldb.version>
   </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-test-component</artifactId>
-      <version>${commons.version}</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <scm>
+    <connection>scm:git:git://github.com/xwiki/xwiki-platform.git</connection>
+    <developerConnection>scm:git:git@github.com:xwiki/xwiki-platform.git</developerConnection>
+    <url>https://github.com/xwiki/xwiki-platform/tree/master/</url>
+    <tag>HEAD</tag>
+  </scm>
+  <issueManagement>
+    <system>jira</system>
+    <url>http://jira.xwiki.org/jira/browse/XWIKI</url>
+  </issueManagement>
+  <modules>
+    <module>xwiki-platform-tools</module>
+    <module>xwiki-platform-core</module>
+  </modules>
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <!-- Exclude Tools from being Clovered since 1) we don't really care getting TPC for our tools and
-               2) it's a bit involved to configure the various Maven poms using those plugins to have the Clover JAR
-               injected in the right places. -->
-          <groupId>com.atlassian.maven.plugins</groupId>
-          <artifactId>maven-clover2-plugin</artifactId>
-          <configuration>
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    <plugins>
+      <plugin>
+        <!-- Apply the Checkstyle configurations defined in the top level pom.xml file -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+      </plugin>
+      <!-- Check license headers -->
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <configuration>
+          <includes>
+            <!-- At the moment, only check the following list of files for license headers -->
+            <include>**/*.java</include>
+            <include>**/*.bat</include>
+            <include>**/*.sh</include>
+            <include>**/ApplicationResources.properties</include>
+          </includes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <executions>
+          <!-- Verify that all org.xwiki.commons dependencies have a version specified either as:
+               - ${commons.version}
+               - a value not starting with $ (we want to allow supporting ranges)
+               Also verifies that all org.xwiki.rendering dependencies have a version specified either as:
+               - ${rendering.version}
+               - a value not starting with $ (we want to allow supporting ranges)
+               Also verifies that all org.xwiki.platform dependencies have a version specified either as:
+               - ${project.version}
+               - a value not starting with $ (we want to allow supporting ranges)
+          -->
+          <execution>
+            <id>check-dependency-version</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <validateDependencyVersion implementation="org.xwiki.tool.enforcer.ValidateDependencyVersion">
+                  <versionCheck>
+                    <groupIdPrefix>org.xwiki.commons</groupIdPrefix>
+                    <allowedVersionRegex>\$\{commons.version\}|[^$].*</allowedVersionRegex>
+                  </versionCheck>
+                  <versionCheck>
+                    <groupIdPrefix>org.xwiki.rendering</groupIdPrefix>
+                    <allowedVersionRegex>\$\{rendering.version\}|[^$].*</allowedVersionRegex>
+                  </versionCheck>
+                  <versionCheck>
+                    <groupIdPrefix>org.xwiki.platform</groupIdPrefix>
+                    <allowedVersionRegex>\$\{project.version\}|[^$].*</allowedVersionRegex>
+                  </versionCheck>
+                </validateDependencyVersion>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <includes>
+            <include>**/*Test.java</include>
+            <include>**/*IntegrationTests.java</include>
+          </includes>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
