[Misc] Force Maven to use its repositories to resolve parent POM for top level modules. This is to prevent any error such as having a pom.xml file located in a directory above the top level modules for example.

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,11 @@
          When the "xwiki-platform_Quality_Checks" module is built you definitely don't want its pom.xml to point to
          workspace/xwiki-commons since that job may not have been built for some time (and thus it might not be up to
          date with the latest code from the SCM, thus causing build failures that are hard to track.
+
+         By using an empty value we force Maven to resolve the parent from the Maven repositories,
+         see http://maven.apache.org/ref/3.2.3/maven-model/maven.html#class_parent
     -->
+    <relativePath></relativePath>
   </parent>
   <groupId>org.xwiki.platform</groupId>
   <artifactId>xwiki-platform</artifactId>
