XWIKI-10828: Speed up XWiki instance starting in functional tests XWIKI-8631: Stop XWiki process in functional tests if XWiki is already started when the test starts

--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -276,7 +276,7 @@
             <excludes>
               <exclude>**/gwt/**/client/**/*.java</exclude>
             </excludes>
-            <systemProperties>
+            <systemProperties combine.children="append">
               <!-- Tells XWiki Platform Test module to generate screenshots in the target dir when a test is failing -->
               <property>
                 <name>screenshotDirectory</name>
