--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -50,10 +50,11 @@
     <dependencies>
       <!-- Standard dependencies used in several modules -->
       <!-- Jython engine -->
+      <!-- We use a customized Jython JAR here because the standard one contains lots of useless files creating conflicts -->
       <dependency>
         <groupId>org.python</groupId>
         <artifactId>jython-standalone</artifactId>
-        <version>2.7-b3-xwiki</version>
+        <version>2.7-b3-xwiki-1</version>
       </dependency>
       <!-- Used on remote observation and also by JBossCache/Infinispan (even if it does not really use it) -->
       <dependency>
