--- a/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-fontawesome/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-fontawesome/pom.xml
@@ -35,7 +35,7 @@
   <description>Having Font Awesome as Icon Theme</description>
   <properties>
     <!-- Name to display by the Extension Manager -->
-    <xwiki.extension.name>Makes Font Awesome available as an Icon Theme</xwiki.extension.name>
+    <xwiki.extension.name>Font Awesome Icon Theme</xwiki.extension.name>
     <!-- Old names of this module used for retro compatibility when resolving dependencies of old extensions -->
     <xwiki.extension.features>
     <!-- only used in 6.2M1 -->
