--- a/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-fontawesome/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-fontawesome/pom.xml
@@ -32,7 +32,7 @@
   <artifactId>xwiki-platform-icon-fontawesome</artifactId>
   <packaging>xar</packaging>
   <name>XWiki Platform - Icon - Font Awesome</name>
-  <description>Having Font Awesome as Icon Theme</description>
+  <description>Makes Font Awesome available as an Icon Theme</description>
   <properties>
     <!-- Name to display by the Extension Manager -->
     <xwiki.extension.name>Font Awesome Icon Theme</xwiki.extension.name>
