[misc] Added coverage ration

--- a/xwiki-platform-tools/xwiki-platform-tool-packager-plugin/pom.xml
+++ b/xwiki-platform-tools/xwiki-platform-tool-packager-plugin/pom.xml
@@ -36,6 +36,7 @@
    </description>
   <properties>
     <mavenVersion>3.0.5</mavenVersion>
+    <xwiki.jacoco.instructionRatio>0.01</xwiki.jacoco.instructionRatio>
   </properties>
   <dependencies>
     <!-- Maven -->
