[misc] Improve pom.xml
(cherry picked from commit bfeebfd3e70b96242805af4efe35188cadd3204c)

--- a/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-streams/xwiki-platform-filter-stream-xar/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-streams/xwiki-platform-filter-stream-xar/pom.xml
@@ -29,12 +29,12 @@
   </parent>
   <artifactId>xwiki-platform-filter-stream-xar</artifactId>
   <name>XWiki Platform - Filter - XAR</name>
-  <description>Wiki stream extension to read and write XAR packages</description>
+  <description>Filter stream extension to read and write XAR packages</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.75</xwiki.jacoco.instructionRatio>
 
     <!-- Name to display by the Extension Manager -->
-    <xwiki.extension.name>Filter Confluence XAR module</xwiki.extension.name>
+    <xwiki.extension.name>Filter XAR module</xwiki.extension.name>
   </properties>
   <dependencies>
     <dependency>
