XWIKI-11018: Don't use FOP to perform RTF exports

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -800,6 +800,7 @@ core.export.pdf.options.comments=Comments
 core.export.pdf.options.comments.hint=Include page comments at the end of the PDF document, usually before the image attachments.
 core.export.pdf.options.images=Image attachments
 core.export.pdf.options.images.hint=Print image attachments at the very end of the PDF document.
+core.export.formatUnknown=Office server is not started or that export format is not supported.
 
 ### Paging links
 web.paging.pageNumberOf=Page {0} of {1}
