--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2111,6 +2111,8 @@ admin.panelwizard=Panel Wizard
 admin.panels.panelwizard.description=Add and remove panels, change the page layout.
 admin.colorthemes=Color Themes
 admin.colorthemes.description=Settings for color themes customization.
+admin.colorthemes.colibrithemes=Colibri Themes
+admin.colorthemes.flamingothemes=Flamingo Themes
 admin.icontheme=Icon Themes
 
 admin.users=Users
