--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3953,7 +3953,7 @@ platform.extension.distributionWizard.welcomeStepStepsHint=The following steps a
 platform.extension.distributionWizard.welcomeStepActionsHint=If you haven't finished configuring XWiki then you can choose to do the installation later. The wizard will reappear after the XWiki runtime is restarted. Although we don't recommend it, you can also do the installation by yourself, but note that you won't be able to get the wizard back easily if you choose to do so. Continue to the next step if you wish to perform the install now. Whatever you choose, after the wizard is closed you will be redirected back to the page you have requested.
 
 platform.extension.distributionWizard.reportStepTitle=Report
-platform.extension.distributionWizard.reportStepDescription=The installation is now finished. Here is a report of what happen during the process.
+platform.extension.distributionWizard.reportStepDescription=The installation is now finished. Here is a report of what happened during the process.
 platform.extension.distributionWizard.reportStepDocumentsDescription=Various steps of the Distribution Wizard are modifying pages of the wikis. The following tree contains all the pages that have been created, modified or deleted page during the installation.
 platform.extension.distributionWizard.reportStepDocumentsTitle=Documents
 platform.extension.distributionWizard.reportStepDocumentsNoChange=No documents were modified during this Distribution Wizard.
