--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-theme/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-theme/pom.xml
@@ -49,5 +49,10 @@
       <artifactId>less</artifactId>
       <version>1.7.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>colpick</artifactId>
+      <version>2.0.2</version>
+    </dependency>
   </dependencies>
 </project>
