XWIKI-11126: Wording issues on Administration -> Presentation
(cherry picked from commit b1f42de7767f82fbd3ba4e0a5ea0e3fcb59be540)

Conflicts:
	xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2111,7 +2111,9 @@ admin.panelwizard=Panel Wizard
 admin.panels.panelwizard.description=Add and remove panels, change the page layout.
 admin.colorthemes=Color Themes
 admin.colorthemes.description=Settings for color themes customization.
-admin.icontheme=Icon Themes
+admin.colorthemes.colibrithemes=Colibri Themes
+admin.colorthemes.flamingothemes=Flamingo Themes
+admin.icontheme=Icon Theme
 
 admin.users=Users
 admin.users.description=Manage users of this wiki: add, remove, modify their profile information.
@@ -2164,7 +2166,7 @@ admin.footer=Footer
 admin.skin=Skin
 admin.messagestream=Message Stream
 admin.messagestream.description=Enable or disable the message stream in the wiki.
-admin.colortheme=Color theme
+admin.colortheme=Color Theme
 admin.colortheme.wikiSetting=The color theme configured at the wiki level is {0}.
 admin.colortheme.manage=Manage color themes\u00BB
 admin.customize=Customize
