XWIKI-11034: Use LESS4J for the implementation of LESSCompiler.
* Introduce a configuration to either use the JavaScript compiler or LESS4j

--- a/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-default/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-default/pom.xml
@@ -84,5 +84,10 @@
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.github.sommeri</groupId>
+      <artifactId>less4j</artifactId>
+      <version>1.8.2</version>
+    </dependency>
   </dependencies>
 </project>
