[Misc] Create functional tests for the Flamingo Theme Application.
* Fix the build.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-test/xwiki-platform-flamingo-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-test/xwiki-platform-flamingo-test-tests/pom.xml
@@ -44,6 +44,18 @@
       <version>${project.version}</version>
       <type>xar</type>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-administration-ui</artifactId>
+      <version>${project.version}</version>
+      <type>xar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-colorthemes-ui</artifactId>
+      <version>${project.version}</version>
+      <type>xar</type>
+    </dependency>
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.xwiki.platform</groupId>
