XWIKI-11163: Cache wiki based configuration sources Also made MockitoOldcoreRule support fully mocked environment

--- a/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-maintainer/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-maintainer/pom.xml
@@ -90,6 +90,11 @@
       <version>${rendering.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
