--- a/xwiki-platform-core/xwiki-platform-query/xwiki-platform-query-jpql-parser/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-query/xwiki-platform-query-jpql-parser/pom.xml
@@ -47,6 +47,19 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <!-- Apply the Checkstyle configurations defined in the top level pom.xml file -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <configuration>
+          <excludes>
+            org/xwiki/query/jpql/analysis/*.java,
+            org/xwiki/query/jpql/lexer/*.java,
+            org/xwiki/query/jpql/node/*.java,
+            org/xwiki/query/jpql/parser/*.java
+          </excludes>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
