XWIKI-11166: Add a 'Go to [entity]' entry in the navbar, while expanding the menu selection to the whole width.
(cherry picked from commit e4ac9411d94b696d6e5b95b6a2c0c83ca7c1f610)

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -849,6 +849,9 @@ core.minoredit.hide=Hide minor edits
 ### top menu
 core.menu.main.title=General Actions:
 core.menu.content.title=Page Actions:
+core.menu.goto.wiki=Go to Wiki
+core.menu.goto.space=Go to Space
+core.menu.goto.page=Go to Page
 core.menu.create=Add
 core.menu.create.page=Page
 core.menu.create.pageFromOffice=Page from Office
