XWIKI-10571: Broken Annotations viewer - Added missing annotations viewer - Javascript probably still needs fixing for this viewer

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -959,6 +959,8 @@ core.viewers.comments.editForm.fetch.failed=Failed to retrieve comment:
 ### Deprecated:
 core.viewers.comments.confirmDelete=Are you sure you want to remove this comment?
 
+core.viewers.annotations.title=Annotations on {0}
+
 core.viewers.attachments.title=Attachments for <a href="{1}">{0}</a>
 core.viewers.attachments.download=Download this attachment
 core.viewers.attachments.delete=Delete
