XWIKI-10840: Invalid HTML5 meta tags used in flamingo.
* Introduce the SetContentScriptTypeFilter to get rid of one of the meta tags.
* Remove <meta http-equiv="imagetoolbar" content="no"/>.
* Add the 'X-UA-Compatible' HTTP header for IE.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/WEB-INF/web.xml
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/WEB-INF/web.xml
@@ -104,6 +104,12 @@
     </init-param>
   </filter>
 
+  <!-- This filter is used to add the 'Content-Type-Script' header to the HTTP response. -->
+  <filter>
+    <filter-name>Set Content-Script-Type</filter-name>
+    <filter-class>org.xwiki.container.servlet.filters.internal.SetContentScriptTypeFilter</filter-class>
+  </filter>
+
   <!-- The encoding filter MUST always be the first one, as setting the encoding does not work after accessing the
        request data. -->
   <filter-mapping>
@@ -169,6 +175,11 @@
     <dispatcher>REQUEST</dispatcher>
     <dispatcher>INCLUDE</dispatcher>
     <dispatcher>FORWARD</dispatcher>
+  </filter-mapping>
+
+  <filter-mapping>
+    <filter-name>Set Content-Script-Type</filter-name>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
 
   <!-- Initializes XWiki -->
