--- a/xwiki-platform-core/xwiki-platform-skin/xwiki-platform-skin-skinx/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-skin/xwiki-platform-skin-skinx/src/main/resources/ApplicationResources.properties
@@ -25,3 +25,10 @@ XWiki.StyleSheetExtension_cache_long=Long
 XWiki.StyleSheetExtension_cache_short=Short
 XWiki.StyleSheetExtension_cache_default=Default
 XWiki.StyleSheetExtension_cache_forbid=No caching
+XWiki.JavaScriptExtension_use_currentPage=On this page or on demand
+XWiki.JavaScriptExtension_use_onDemand=On demand only
+XWiki.JavaScriptExtension_use_always=On this wiki
+XWiki.JavaScriptExtension_cache_long=Long
+XWiki.JavaScriptExtension_cache_short=Short
+XWiki.JavaScriptExtension_cache_default=Default
+XWiki.JavaScriptExtension_cache_forbid=No caching
